--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "^1.0.0-beta.4",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "throttle-debounce": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
